fix(map): make legend visible in dark mode

--- a/src/pages/Map.scss
+++ b/src/pages/Map.scss
@@ -56,6 +56,10 @@ main > div,
       }
     }
   }
+
+  .map-index.dark {
+    background-color: #303230;
+  }
 }
 
 pre {
